# ksp_practice

./: .gitignore  README.md
conspects/24-04-2020-startWithQT/: CMakeLists.txt
conspects/24-04-2020-startWithQT/include/: widget.hpp
conspects/24-04-2020-startWithQT/src/: main.cpp  widget.cpp  widget.ui
homework/kirianov/XO/: CMakeLists.txt  XO.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
homework/ticTacToe/Timofey/: .gitignore
homework/ticTacToe/Timofey/build-ticTacToe-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  ticTacToe  ticTacToe.cbp
homework/ticTacToe/Timofey/build-ticTacToe-Desktop-Debug/ticTacToe_autogen/: moc_predefs.h  mocs_compilation.cpp
homework/ticTacToe/Timofey/build-ticTacToe-Desktop-Debug/ticTacToe_autogen/EWIEGA46WW/: moc_widget.cpp
homework/ticTacToe/Timofey/build-ticTacToe-Desktop-Debug/ticTacToe_autogen/K6S233IZAZ/: moc_widget.cpp
homework/ticTacToe/Timofey/build-ticTacToe-Desktop-Debug/ticTacToe_autogen/include/: ui_widget.h
homework/ticTacToe/Timofey/ticTacToe/: CMakeLists.txt
homework/ticTacToe/Timofey/ticTacToe/headers/: ticTacToe.hpp  widget.hpp
homework/ticTacToe/Timofey/ticTacToe/src/: ticTacToe.cpp  widget.cpp  widget.ui
homework/ticTacToe/sheshenya/: logic.cpp  logic.hpp  main.cpp  startdialog.cpp  startdialog.hpp  widget.cpp  widget.h  widget.ui
